# gma2-mcp

./: .env.template  .gitignore  Makefile  README.md  connect.sh  main.py  pyproject.toml  pytest.ini
src/: commands.py  server.py  telnet_client.py  tools.py
src/commands/: __init__.py  constants.py  functions.py  helpers.py  objects.py
src/commands/functions/: __init__.py  assignment.py  call.py  edit.py  helping.py  info.py  labeling.py  macro.py  park.py  playback.py  selection.py  store.py  values.py  variables.py
src/commands/objects/: __init__.py  attributes.py  cues.py  dmx.py  executors.py  fixtures.py  groups.py  layouts.py  presets.py  time.py
tests/: __init__.py  conftest.py  test_assignment.py  test_attribute.py  test_call.py  test_commands.py  test_edit.py  test_empty.py  test_helpers_keywords.py  test_info.py  test_labeling.py  test_macro.py  test_objects.py  test_park.py  test_playback.py  test_selection.py  test_store.py  test_telnet_client.py  test_tempfader.py  test_tools.py  test_values.py  test_variables.py
